# AudioConverter

./: .env.example  .gitignore  README.md  docker-compose.yml
app/: Dockerfile
app/app/: pyproject.toml  script.sh
app/app/src/: config.py  main.py  router.py  schemas.py
app/app/src/database/: engine.py  models.py
